code-base authentication and authorization